--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 18px;
   line-height: 34px;
   color: #777;
-  background: url("../images/concrete_seamless.png");
+  background-color: blue;
 }
 
 * {
@@ -87,7 +87,7 @@ nav a {
   padding-left: 15px;
   margin-left: 15px;
   line-height: 18px;
-  color: #999;
+  color: green;
   text-decoration: none;
   border-left: 1px solid #efefef;
 }
@@ -196,7 +196,8 @@ h3,
   height: auto;
   margin-top: 10px;
   margin-right: 25px;
-}
+  border: 2px solid black;
+}  
 
 /* contact page */
 
