--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 18px;
   line-height: 34px;
   color: #777;
-  background-color: blanchedalmond;
+      background-color: blanchedalmond;
 }
 
 * {
@@ -59,8 +59,8 @@ h3 {
   margin: 0 0 30px;
   overflow: auto;
   color: #fff;
-  background: #fff;
-  border-bottom: 2px solid #ccc;
+  background: lavenderblush;
+  border-bottom: 6px solid #ccc;
 }
 
 #logo {
@@ -84,9 +84,9 @@ nav {
 
 nav a {
   display: inline-block;
-  padding-left: 15px;
-  margin-left: 15px;
-  line-height: 18px;
+  padding-left: 25px;
+  margin-left: 30px;
+  line-height: 20px;
   color: green;
   text-decoration: none;
   border-left: 1px solid #efefef;
